# pyazvalidatemoveresources

./: CHANGELOG.md  Makefile  README.md  README_Old.md  TODO.md  Taskfile.yml  console_helper.py  deps.txt  example_env.txt  logging_helper.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: build.yml
azure_helper/: __init__.py  api_helper.py  auth_helper.py  request_helper.py  resource_client_helper.py  subscription_helper.py
common/: constants.py
src/: main.py  main_old.py
test/unit/: test_console.py  test_constants.py  test_package.py
tests/unit/: test_console.py  test_package.py
utils/: __init__.py  logging_helper.py
